@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.4 2012/07/28 18:05:59 prlw1 Exp $
+$NetBSD: distinfo,v 1.5 2012/10/08 20:31:27 prlw1 Exp $
 
-SHA1 (at-spi2-atk-2.6.0.tar.xz) = c582265c2eee0b33aa4c1956773b72843c204c06
-RMD160 (at-spi2-atk-2.6.0.tar.xz) = 108b1b677469530ca47f9733308b3fec188bc261
-Size (at-spi2-atk-2.6.0.tar.xz) = 274760 bytes
+SHA1 (at-spi2-atk-2.6.1.tar.xz) = 5c31f86ab41a8ee88d64930b43f9823283720eb8
+RMD160 (at-spi2-atk-2.6.1.tar.xz) = 1a047203461f7a343988d57dd0804c1845a83262
+Size (at-spi2-atk-2.6.1.tar.xz) = 274796 bytes
 SHA1 (patch-atk-adaptor_Makefile.in) = 91ea0570a8a99dfa8c06005cb8c26b161b93731c
