@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2012/09/15 10:04:05 obache Exp $
+# $NetBSD: Makefile,v 1.7 2012/10/08 20:23:48 prlw1 Exp $
 #
 
-DISTNAME=	at-spi2-core-2.6.0
+DISTNAME=	at-spi2-core-2.6.1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/at-spi2-core/2.6/}
 EXTRACT_SUFX=	.tar.xz
