@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11608 2012/10/17 18:35:24 tron Exp $
+$NetBSD: TODO,v 1.11611 2012/10/18 09:44:03 wiz Exp $
 
 Suggested new packages
 ======================
@@ -303,7 +303,7 @@ Suggested new packages
 	app: constype, intel-gpu-tools, mkcomposecache, oclock,
 	proxymngr, rstart, showfont, xcmsdb, xdbedizzy, xditview, xedit,
 	xf86dga, xfindproxy, xfsinfo, xfwp, xgc, xlsatoms, xmh,
-	xphelloworld, xpr, xrx, xscope, xstdcmap, xtrap
+	xphelloworld, xpr, xrx, xstdcmap, xtrap
 	driver: xf86-input-acecad, xf86-input-aiptek,
 	xf86-input-calcomp, xf86-input-citron, xf86-input-digitaledge,
 	xf86-input-dmc, xf86-input-dynapro, xf86-input-elo2300,
@@ -922,7 +922,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ncview-2.1.1
 	o ne-2.01
 	o nessus-4.4.1
-	o net-snmp-5.7.1
+	o net-snmp-5.7.2
 	o netcdf-4.2.1.1
 	o netramet-50
 	o nettle-2.5
@@ -1341,7 +1341,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xrmap-anthems-1.2
 	o xrmap-base-2.33.1
 	o xrn-9.02
-	o xscope-1.3.1 [unpackaged]
 	o xsd-3.3.0
 	o xsoldier-1.4
 	o xterm-284
