@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2012/06/06 09:43:14 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2012/08/24 15:21:20 wiz Exp $
 
 DISTNAME=	# empty
-PKGNAME=	modular-xorg-apps-1.8
+PKGNAME=	modular-xorg-apps-1.9
 CATEGORIES=	meta-pkgs x11
 MASTER_SITES=	${MASTER_SITE_XORG:=app/}
 DISTFILES=	# empty
@@ -59,6 +59,7 @@ DEPENDS+=	xprop-[0-9]*:../../x11/xprop
 DEPENDS+=	xrandr-[0-9]*:../../x11/xrandr
 DEPENDS+=	xrdb-[0-9]*:../../x11/xrdb
 DEPENDS+=	xrefresh-[0-9]*:../../x11/xrefresh
+DEPENDS+=	xscope-[0-9]*:../../x11/xscope
 DEPENDS+=	xset-[0-9]*:../../x11/xset
 DEPENDS+=	xsetmode-[0-9]*:../../x11/xsetmode
 DEPENDS+=	xsetpointer-[0-9]*:../../x11/xsetpointer
