@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2012/08/12 15:46:38 taca Exp $
+# $NetBSD: Makefile,v 1.11 2012/10/03 21:58:29 wiz Exp $
 
-DISTNAME=	drupal-7.15
-PKGREVISION=	1
+DISTNAME=	drupal-7.16
 CATEGORIES=	www
 MASTER_SITES=	http://drupal.org/files/projects/
 
