@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.5 2012/05/03 07:02:57 taca Exp $
+$NetBSD: distinfo,v 1.6 2012/08/12 15:46:38 taca Exp $
 
-SHA1 (drupal-7.15.tar.gz) = 6a64cc1ab37899fb318cfffd74f3104817cdbcb9
-RMD160 (drupal-7.15.tar.gz) = 850bfe727e05b52fdceecd822fca16fd616c579f
-Size (drupal-7.15.tar.gz) = 3142219 bytes
+SHA1 (drupal-7.16.tar.gz) = 29cb7c77c5952649b37cafbb205cfbc6e53f99fc
+RMD160 (drupal-7.16.tar.gz) = 02391bb832dc4fd075627a2059b2b49696b4beae
+Size (drupal-7.16.tar.gz) = 3142889 bytes
