@@ -1,0 +1,3 @@
+@comment $NetBSD$
+bin/xscope
+man/man1/xscope.1
