@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (xscope-1.3.1.tar.bz2) = c0bf5bce04a3b46cb53d443ccedc5c6c393784aa
+RMD160 (xscope-1.3.1.tar.bz2) = 34756fe4e2aac5cffe28f96fcd963accb83b1dbe
+Size (xscope-1.3.1.tar.bz2) = 198027 bytes
