@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3302 2012/10/17 22:25:02 schmonz Exp $
+$NetBSD: CHANGES-2012,v 1.3308 2012/10/18 12:06:01 adam Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5124,3 +5124,9 @@ Changes to the packages collection and infrastructure in 2012:
 	Added security/scrypt version 1.1.6 [pettai 2012-10-17]
 	Updated www/ikiwiki to 3.20121017 [schmonz 2012-10-17]
 	Updated parallel/openmpi to 1.6.2 [asau 2012-10-17]
+	Added x11/xscope version 1.3.1 [wiz 2012-10-18]
+	Updated meta-pkgs/modular-xorg-apps to 1.9 [wiz 2012-10-18]
+	Updated devel/at-spi2-core to 2.6.1 [prlw1 2012-10-18]
+	Updated devel/at-spi2-atk to 2.6.1 [prlw1 2012-10-18]
+	Updated www/py-django to 1.4.2 [adam 2012-10-18]
+	Updated www/drupal7 to 7.16 [taca 2012-10-18]
